--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Snake Game 🐍 </title>
+    <title>Snake Game 🐍</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
   </head>
   <body>
-    <h1>Snake Game</h1>
+    <h1>🧑🏿 Kaa wants to eat Mowgli 🐍</h1>
   </body>
 </html>
