Modify css + added music on home page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="script.js"></script>
   </head>
   <body>
-      <h1>🧑🏿 Trussst in me, jussst in me 🐍</h1>
+    <h1>🧑🏿 Trussst in me, jussst in me 🐍</h1>
+    <audio id="bg-music" loop>
+      <source src="assets\songs\into_the_jungle.mp3" type="audio/mpeg" />
+      Do you hear the ssssnake ?
+    </audio>
+    <button id="toggle-music">🔊</button>
   </body>
 </html>
